--- a/www/ui/milestone10x_screens/2-1-0-1.html
+++ b/www/ui/milestone10x_screens/2-1-0-1.html
@@ -142,7 +142,7 @@
 	<div class="app" id="div2-1-0-1">
 		<h2>Save / edit template (2.1.0.1)</h2>
 
-		<p id="functnbar"><input type="submit" value="submit changes" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="clear form" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="submit changes" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="clear form" class="button" /></p>
 		
 		<p><a href="#">use this template</a></p>
 		
@@ -210,7 +210,7 @@
 		
 		<p><a href="#">use this template</a></p>
 
-		<p id="functnbar"><input type="submit" value="submit changes" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="clear form" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="submit changes" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="clear form" class="button" /></p>
 	</div>
 	<!-- Scarab - App -->
 
