--- a/www/ui/milestone10x_screens/2-1-4-0.html
+++ b/www/ui/milestone10x_screens/2-1-4-0.html
@@ -142,7 +142,7 @@
 	<div class="app" id="div2-1-4-0">
 		<h2>Customize / create "enter issue" (2.1.4.0) milestone10 ver.</h2>
 
-		<p id="functnbar"><input type="submit" value="preview enter issue" class="button" />&#160;<input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="preview enter issue" class="button" />&#160;<input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" /></p>
 		
 		<h3>Options</h3>
 		
@@ -354,7 +354,7 @@
 		
 		<p><input type="submit" value="add group" class="button" />&#160;<input type="submit" value="delete group" class="button" />&#160;<input type="submit" value="resort groups" class="button" /></p>
 
-		<p id="functnbar"><input type="submit" value="preview enter issue" class="button" />&#160;<input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="preview enter issue" class="button" />&#160;<input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" /></p>
 	</div>
 	<!-- Scarab - App -->
 
