--- a/www/ui/milestone1x_screens/2-1-0.html
+++ b/www/ui/milestone1x_screens/2-1-0.html
@@ -152,7 +152,7 @@
 			</table>
 		</div>
 				
-		<p id="functnbar"><input type="submit" value="check for dupes" class="bttn" />&#160;<input type="reset" value="reset form" class="bttn" /></p>
+		<p class="functnbar"><input type="submit" value="check for dupes" class="bttn" />&#160;<input type="reset" value="reset form" class="bttn" /></p>
 		
 		<h3>Apply issue entry template</h3>
 		
@@ -301,7 +301,7 @@
 			</tr>
 			</table>
 		</div>
-		<p id="functnbar"><input type="submit" value="check for dupes" class="bttn" />&#160;<input type="reset" value="reset form" class="bttn" /></p>
+		<p class="functnbar"><input type="submit" value="check for dupes" class="bttn" />&#160;<input type="reset" value="reset form" class="bttn" /></p>
 	</div>
 	<!-- Scarab - App -->
 
