--- a/www/ui/milestone1x_screens/2-1-2.html
+++ b/www/ui/milestone1x_screens/2-1-2.html
@@ -152,7 +152,7 @@
 			</table>
 		</div>
 		
-		<p id="functnbar"><input type="submit" value="submit issue" />&#160;<input type="reset" value="reset form" /></p>
+		<p class="functnbar"><input type="submit" value="submit issue" />&#160;<input type="reset" value="reset form" /></p>
 	
 		<h3>Input your issue</h3>
 	
@@ -213,7 +213,7 @@
 	
 		<p>workflow options:&#160; <input type="radio" name="foo" /> return to 2.1.0 <input type="radio" name="foo" /> return to 2.0.0 <input type="radio" name="foo" /> return to 2.1.3</p>
 	
-		<p id="functnbar"><input type="submit" value="submit issue" />&#160;<input type="reset" value="reset form" /></p>
+		<p class="functnbar"><input type="submit" value="submit issue" />&#160;<input type="reset" value="reset form" /></p>
 	</div>
 	<!-- Scarab - App -->
 
