--- a/www/ui/milestone1x_screens/2-6-1.html
+++ b/www/ui/milestone1x_screens/2-6-1.html
@@ -144,7 +144,7 @@
 	
 		<p>&#171; previous | 1 of 3 | <a href="#">next</a> <a href="#">&#187;</a></p>
 	
-		<p id="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" /></p>
 
 		<h3>Issue id #123</h3>
 		
@@ -386,7 +386,7 @@
 	
 		<p><a href="#">view complete history</a></p>
 	
-		<p id="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" /></p>
 	
 		<p>&#171; previous | 1 of 3 | <a href="#">next</a> <a href="#">&#187;</a></p>
 	</div>
