--- a/www/ui/milestone1x_screens/3-0-0.html
+++ b/www/ui/milestone1x_screens/3-0-0.html
@@ -144,12 +144,12 @@
 
 
 		
-		<div id="functnbar">
+		<div class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<th>select items to:</th>
+			<td><strong>select items to:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>general functions</th>
+			<td><strong>general functions</strong></td>
 			</tr>
 			<tr>
 			<td><input type="submit" value="add to 'Enter issue page'" class="bttn" />&nbsp;<input type="submit" value="copy" class="bttn" />&nbsp;<input type="submit" value="delete" class="bttn" /></td>
@@ -217,12 +217,12 @@
 
 
 		
-		<div id="functnbar">
+		<div class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<th>select items to:</th>
+			<td><strong>select items to:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>general functions</th>
+			<td><strong>general functions</strong></td>
 			</tr>
 			<tr>
 			<td><input type="submit" value="add to 'Enter issue page'" class="bttn" />&nbsp;<input type="submit" value="copy" class="bttn" />&nbsp;<input type="submit" value="delete" class="bttn" /></td>
