--- a/www/ui/milestone1x_screens/3-0-2-0_step2.html
+++ b/www/ui/milestone1x_screens/3-0-2-0_step2.html
@@ -142,7 +142,7 @@
 	<div class="app" id="div3-0-2-0step2">
 		<h2>Add / edit attribute (3.0.2.0) step2</h2>
 		
-		<p id="functnbar"><input type="submit" value="previous" />&#160;<input type="submit" value="next" /></p>
+		<p class="functnbar"><input type="submit" value="previous" />&#160;<input type="submit" value="next" /></p>
 		
 		<h3>General info</h3>
 		
@@ -216,7 +216,7 @@
 		
 		<p><a href="#">back to previous page</a></p>
 
-		<p id="functnbar"><input type="submit" value="previous" />&#160;<input type="submit" value="next" /></p>
+		<p class="functnbar"><input type="submit" value="previous" />&#160;<input type="submit" value="next" /></p>
 	</div>
 	<!-- Scarab - App -->
 
