--- a/www/ui/milestone2x_screens/2-2-0-x.html
+++ b/www/ui/milestone2x_screens/2-2-0-x.html
@@ -152,7 +152,7 @@
 			</table>
 		</div>
 		
-		<p id="functnbar"><input type="submit" value="search" />&#160;<input type="submit" value="cancel" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="search" />&#160;<input type="submit" value="cancel" class="button" /></p>
 		
 		<h3>Text search</h3>
 		
@@ -205,7 +205,7 @@ URL
 		
 		<p><a href="#">edit custom search</a></p>
 
-		<p id="functnbar"><input type="submit" value="search" />&#160;<input type="submit" value="cancel" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="search" />&#160;<input type="submit" value="cancel" class="button" /></p>
 	</div>
 	<!-- Scarab - App -->
 
