--- a/www/ui/milestone2x_screens/2-2-0.html
+++ b/www/ui/milestone2x_screens/2-2-0.html
@@ -152,7 +152,7 @@
 			</table>
 		</div>
 		
-		<p id="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="reset" />&#160;<input type="submit" value="save this query" /></p>
+		<p class="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="reset" />&#160;<input type="submit" value="save this query" /></p>
 		
 		<h3>Select save query</h3>
 		<div class="axial">
@@ -791,7 +791,7 @@
 			</table>
 		</div>
 
-		<p id="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="reset" />&#160;<input type="submit" value="save this query" /></p>
+		<p class="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="reset" />&#160;<input type="submit" value="save this query" /></p>
 	</div>
 	<!-- Scarab - App -->
 
