--- a/www/ui/milestone2x_screens/2-6-0-1.html
+++ b/www/ui/milestone2x_screens/2-6-0-1.html
@@ -142,7 +142,7 @@
 	<div class="app" id="div2-6-0-1">
 		<h2>Add / remove attributes from view (2.6.0.1)</h2>
 
-		<p id="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="reset to default" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="reset to default" class="button" /></p>
 
 		<h3>Attributes</h3>
 		
@@ -217,7 +217,7 @@
 		
 		<p><input type="submit" value="resort" /></p>
 
-		<p id="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="reset to default" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="reset to default" class="button" /></p>
 	</div>
 	<!-- Scarab - App -->
 
