--- a/www/ui/milestone2x_screens/2-6-0.html
+++ b/www/ui/milestone2x_screens/2-6-0.html
@@ -154,16 +154,16 @@
 		
 		<p>&#171; previous | 1 of 1 | next &#187; (<a href="#">add/remove attributes from view</a>)</p>
 		
-		<div id="functnbar">
+		<div class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<th>save:</th>
+			<td><strong>save:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>verbose view:</th>
+			<td><strong>verbose view:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>reassign:</th>
+			<td><strong>reassign:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>refine query:</th>
+			<td><strong>refine query:</strong></td>
 			</tr>
 			<tr>
 			<td><input type="submit" value="query" class="bttn" /></td>
@@ -218,16 +218,16 @@
 		</tr>
 		</table>
 				   
-		<div id="functnbar">
+		<div class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<th>save:</th>
+			<td><strong>save:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>verbose view:</th>
+			<td><strong>verbose view:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>reassign:</th>
+			<td><strong>reassign:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>refine query:</th>
+			<td><strong>refine query:</strong></td>
 			</tr>
 			<tr>
 			<td><input type="submit" value="query" class="bttn" /> </td>
