--- a/www/ui/milestone3x_screens/2-0-0-2.html
+++ b/www/ui/milestone3x_screens/2-0-0-2.html
@@ -142,7 +142,7 @@
 	<div class="app" id="div2-0-0-2">
 		<h2>Vote management (2.0.0.2)</h2>
 		
-		<p id="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="reset to defaults" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="reset to defaults" class="button" /></p>
 		
 		<p><a href="#">add/remove attributes from view</a></p>
 		
@@ -270,7 +270,7 @@
 
 		<p><input type="submit" value="remove vote from selected" class="button" />&#160;<input type="submit" value="submit updates to admin" class="button" /></p>
 
-		<p id="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="reset to defaults" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="reset to defaults" class="button" /></p>
 	</div>
 	<!-- Scarab - App -->
 
