--- a/www/ui/milestone3x_screens/2-1-3.html
+++ b/www/ui/milestone3x_screens/2-1-3.html
@@ -142,7 +142,7 @@
 	<div class="app" id="div2-1-3">
 		<h2>Assign issue (2.1.3)</h2>
 		
-		<p id="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset" /></p>
+		<p class="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset" /></p>
 		
 		<h3>Assign issue</h3>
 		
@@ -178,7 +178,7 @@
 			
 		<p><textarea rows="4" cols="40"></textarea></p>
 				
-		<p id="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset" /></p>
+		<p class="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset" /></p>
 	</div>
 	<!-- Scarab - App -->
 
