--- a/www/ui/milestone3x_screens/2-7-0(2).html
+++ b/www/ui/milestone3x_screens/2-7-0(2).html
@@ -142,7 +142,7 @@
 	<div class="app" id="div2-7-0">
 		<h2>Copy / move Issue (2.7.0) step2</h2>
 		
-		<p id="functnbar"><input type="submit" value="move / copy" />&nbsp;<input type="submit" value="cancel" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="move / copy" />&nbsp;<input type="submit" value="cancel" class="button" /></p>
 		
 		<h3>Issue to be copied / moved</h3>
 		
@@ -182,7 +182,7 @@
 		
 		<p><input type="radio" name="action" value="move" />&nbsp;move</p>	
 		
-		<p id="functnbar"><input type="submit" value="map issue attributes" /></p>
+		<p class="functnbar"><input type="submit" value="map issue attributes" /></p>
 		
 		<h3>Issue attribute mapping results</h3>
 		
@@ -276,7 +276,7 @@
 		</tr>
 		</table>
 		
-		<p id="functnbar"><input type="submit" value="move / copy" />&nbsp;<input type="submit" value="cancel" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="move / copy" />&nbsp;<input type="submit" value="cancel" class="button" /></p>
 	</div>
 	<!-- Scarab - App -->
 
