--- a/www/ui/milestone3x_screens/3-3-0.html
+++ b/www/ui/milestone3x_screens/3-3-0.html
@@ -142,7 +142,7 @@
 	<div class="app" id="div3-3-0">
 		<h2>Voting management (3.3.0)</h2>
 		
-		<p id="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
 		
 		<h3>Votes are added to an issue</h3>
 		
@@ -183,7 +183,7 @@
 		
 		<p><textarea rows="4" cols="40">default content</textarea></p>
 
-		<p id="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
 	</div>
 	<!-- Scarab - App -->
 
