--- a/www/ui/milestone4x_screens/2-5-0.html
+++ b/www/ui/milestone4x_screens/2-5-0.html
@@ -142,7 +142,7 @@
 	<div class="app" id="div2-5-0">
 		<h2>Workflow customization options (2.5.0)</h2>
 		
-		<p id="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
 		
 		<h3>My new issue alert (email)</h3>
 		
@@ -199,7 +199,7 @@
 		<option>both</option>
 		</select></p>
 
-		<p id="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
 	</div>
 	<!-- Scarab - App -->
 
