--- a/www/ui/milestone4x_screens/3-5-0.html
+++ b/www/ui/milestone4x_screens/3-5-0.html
@@ -142,7 +142,7 @@
 	<div class="app" id="div3-5-0">
 		<h2>Workflow customization options (3.5.0)</h2>
 		
-		<p id="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
 		
 		<h3>My new issue alert (email) <a href="#">(edit)</a></h3>
 		
@@ -218,7 +218,7 @@
 		</select>
 		</p>
 
-		<p id="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
 	</div>
 	<!-- Scarab - App -->
 
