--- a/www/ui/milestone5x_screens/3-5-1.html
+++ b/www/ui/milestone5x_screens/3-5-1.html
@@ -142,7 +142,7 @@
 	<div class="app" id="div3-5-1">
 		<h2>Define custom alert email (3.5.1)</h2>
 		
-		<p id="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="clear form" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="clear form" class="button" /></p>
 		
 		<h3>Custom alert email for project:</h3>
 		
@@ -218,7 +218,7 @@
 		
 		<p>Issues per email:&#160; <input type="radio" name="foo" /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100</p>
 
-		<p id="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="clear form" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="clear form" class="button" /></p>
 	</div>
 	<!-- Scarab - App -->
 
