--- a/www/ui/milestone6x_screens/2-4-0_step1-5b.html
+++ b/www/ui/milestone6x_screens/2-4-0_step1-5b.html
@@ -191,7 +191,7 @@
 			</table>
 		</div>
 		
-		<p id="functnbar"><input type="submit" value="continue" />&nbsp;<input type="submit" value="back" /></p>
+		<p class="functnbar"><input type="submit" value="continue" />&nbsp;<input type="submit" value="back" /></p>
 	</div>
 	<!-- Scarab - App -->
 
