--- a/www/ui/milestone8x_screens/2-0-0-1-2.html
+++ b/www/ui/milestone8x_screens/2-0-0-1-2.html
@@ -142,7 +142,7 @@
 	<div class="app" id="div2-0-0-1-2">
 		<h2>Predefined queue list (2.0.0.1.2)</h2>
 
-		<p id="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" /></p>
 		
 		<h3>Options</h3>
 		
@@ -180,7 +180,7 @@
 		</tr>
 		</table>
 		
-		<p id="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" /></p>
 	</div>
 	<!-- Scarab - App -->
 
