--- a/www/ui/milestone8x_screens/2-0-0-1-3.html
+++ b/www/ui/milestone8x_screens/2-0-0-1-3.html
@@ -142,7 +142,7 @@
 	<div class="app" id="div2-0-0-1-3">
 		<h2>Queue (2.0.0.1.3)</h2>
 		
-		<p id="functnbar"><input type="submit" value="create queue" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="reset" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="create queue" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="reset" class="button" /></p>
 		
 		<h3>Options</h3>
 		
@@ -226,7 +226,7 @@
 			</table>
 		</div>
 
-		<p id="functnbar"><input type="submit" value="create queue" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="reset" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="create queue" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="reset" class="button" /></p>
 	</div>
 	<!-- Scarab - App -->
 
