--- a/www/ui/milestone8x_screens/3-6-0.html
+++ b/www/ui/milestone8x_screens/3-6-0.html
@@ -142,7 +142,7 @@
 	<div class="app" id="div3-6-0">
 		<h2>Approve / reject user submitted x (3.6.0)</h2>
 
-		<p id="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="clear form" /></p>
+		<p class="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="clear form" /></p>
 		
 		<h3>Open submissions</h3>
 		
@@ -228,7 +228,7 @@
 			</table>
 		</div>
 
-		<p id="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="clear form" /></p>
+		<p class="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="clear form" /></p>
 	</div>
 	<!-- Scarab - App -->
 
