--- a/www/ui/milestone10x_screens/2-1-0-2.html
+++ b/www/ui/milestone10x_screens/2-1-0-2.html
@@ -142,7 +142,7 @@
 	<div class="app" id="div2-1-0-2">
 		<h2>Template list (2.1.0.2)</h2>
 
-		<p id="functnbar"><input type="submit" value="delete selected templates" />&#160;<input type="submit" value="cancel" /></p>
+		<p class="functnbar"><input type="submit" value="delete selected templates" />&#160;<input type="submit" value="cancel" /></p>
 		
 		<h3>Templates</h3>
 		
@@ -176,7 +176,7 @@
 		
 		<p><a href="#">&#171;</a> <a href="#">previous</a> | 1 of 1 | <a href="#">next</a> <a href="#">&#187;</a></p>
 
-		<p id="functnbar"><input type="submit" value="delete selected templates" />&#160;<input type="submit" value="cancel" /></p>
+		<p class="functnbar"><input type="submit" value="delete selected templates" />&#160;<input type="submit" value="cancel" /></p>
 	</div>
 	<!-- Scarab - App -->
 
