--- a/www/ui/milestone1x_screens/2-1-1.html
+++ b/www/ui/milestone1x_screens/2-1-1.html
@@ -152,7 +152,7 @@
 			</table>
 		</div>
 		
-		<p id="functnbar"><input type="submit" value="bypass duplicates" />&#160;<input type="submit" value="cancel" /></p>
+		<p class="functnbar"><input type="submit" value="bypass duplicates" />&#160;<input type="submit" value="cancel" /></p>
 
 		<h3>New issue</h3>
 
@@ -259,7 +259,7 @@
 		Text entered into the "note" text area will be appended to "comments" of selected issue(s)
 		when either "add vote to selected" or "submit note only" are executed.
 
-		<p id="functnbar"><input type="submit" value="bypass duplicates" />&#160;<input type="submit" value="cancel" /></p>
+		<p class="functnbar"><input type="submit" value="bypass duplicates" />&#160;<input type="submit" value="cancel" /></p>
 	</div>
 	<!-- Scarab - App -->
 
