--- a/www/ui/milestone1x_screens/2-1-4-0.html
+++ b/www/ui/milestone1x_screens/2-1-4-0.html
@@ -142,7 +142,7 @@
 	<div class="app" id="div2-1-4-0">
 		<h2>Customize / create "enter issue"  (2.1.4.0) milestone1 ver.</h2>
 		
-		<p id="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="done" class="button" />&#160;<input type="submit" value="preview" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="done" class="button" />&#160;<input type="submit" value="preview" class="button" /></p>
 		
 		<h3>Attribute group one</h3>
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
@@ -208,7 +208,7 @@
 
 		<p><a href="#">back to previous page</a></p>
 
-		<p id="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="done" class="button" />&#160;<input type="submit" value="preview" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="done" class="button" />&#160;<input type="submit" value="preview" class="button" /></p>
 	</div>
 	<!-- Scarab - App -->
 
