--- a/www/ui/milestone1x_screens/2-6-2.html
+++ b/www/ui/milestone1x_screens/2-6-2.html
@@ -383,7 +383,7 @@
 		
 		<p><a href="#">view complete history</a></p>
 		
-		<p id="functnbar"><input type="submit" value="save issue #120" />&#160;<input type="submit" value="cancel" /></p>
+		<p class="functnbar"><input type="submit" value="save issue #120" />&#160;<input type="submit" value="cancel" /></p>
 		
 		<h3>Issue id #121</h3>
 		
@@ -624,7 +624,7 @@
 		
 		<p><a href="#">view complete history</a></p>
 		
-		<p id="functnbar"><input type="submit" value="save issue #121" />&#160;<input type="submit" value="cancel" /></p>
+		<p class="functnbar"><input type="submit" value="save issue #121" />&#160;<input type="submit" value="cancel" /></p>
 				
 		<p>issues per page:&#160; <input type="radio" name="foo" checked="checked" /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100&#160;<input type="submit" value="refresh" /></p>
 				
