--- a/www/ui/milestone1x_screens/3-0-2-0.html
+++ b/www/ui/milestone1x_screens/3-0-2-0.html
@@ -142,7 +142,7 @@
 	<div class="app" id="div3-0-2-0">
 		<h2>Add / edit attribute (3.0.2.0)</h2>
 
-		<p id="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" /></p>
 
 		<p><a href="#">&laquo;</a>&nbsp;<a href="#">prev</a> | <a href="#">next</a>&nbsp;<a href="#">&raquo;</a></p>
 		
@@ -271,7 +271,7 @@
 		
 		<p><a href="#">copy this attribute</a></p>
 
-		<p id="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" /></p>
 	</div>
 	<!-- Scarab - App -->
 
