--- a/www/ui/milestone2x_screens/2-2-1.html
+++ b/www/ui/milestone2x_screens/2-2-1.html
@@ -152,7 +152,7 @@
 			</table>
 		</div>
 		
-		<p id="functnbar"><input type="submit" value="save/submit" />&nbsp;<input type="submit" value="execute" />&nbsp;<input type="submit" value="cancel" /></p>
+		<p class="functnbar"><input type="submit" value="save/submit" />&nbsp;<input type="submit" value="execute" />&nbsp;<input type="submit" value="cancel" /></p>
 		
 		<h3>Save query information</h3>
 
@@ -715,7 +715,7 @@
        </table>
       </div>
 
-		<p id="functnbar"><input type="submit" value="save/submit" />&nbsp;<input type="submit" value="execute" />&nbsp;<input type="submit" value="cancel" /></p>
+		<p class="functnbar"><input type="submit" value="save/submit" />&nbsp;<input type="submit" value="execute" />&nbsp;<input type="submit" value="cancel" /></p>
 	</div>
 	<!-- Scarab - App -->
 
