--- a/www/ui/milestone2x_screens/2-2-2.html
+++ b/www/ui/milestone2x_screens/2-2-2.html
@@ -144,7 +144,7 @@
 		
 		<p>Click on location to execute</p>
 		
-		<p id="functnbar"><input type="submit" value="delete selected" />&#160;<input type="submit" value="cancel" /></p>
+		<p class="functnbar"><input type="submit" value="delete selected" />&#160;<input type="submit" value="cancel" /></p>
 		
 		<h3>Templates</h3>
 		
@@ -219,7 +219,7 @@
 
 		<p>&#171; previous | 1 of 1 | next &#187; </p>
 
-		<p id="functnbar"><input type="submit" value="delete selected" />&#160;<input type="submit" value="cancel" /></p>
+		<p class="functnbar"><input type="submit" value="delete selected" />&#160;<input type="submit" value="cancel" /></p>
 	</div>
 	<!-- Scarab - App -->
 
