--- a/www/ui/milestone3x_screens/2-7-0_step1.html
+++ b/www/ui/milestone3x_screens/2-7-0_step1.html
@@ -179,7 +179,7 @@
 		
 		<p><input type="radio" name="action" value="move" />&nbsp;move</p>	
 
-		<p id="functnbar"><input type="submit" value="map issue attributes" /></p>
+		<p class="functnbar"><input type="submit" value="map issue attributes" /></p>
 	</div>
 	<!-- Scarab - App -->
 
