--- a/www/ui/milestone6x_screens/2-4-0_step1-5.html
+++ b/www/ui/milestone6x_screens/2-4-0_step1-5.html
@@ -207,7 +207,7 @@
 			</table>
 		</div>
 
-		<p id="functnbar"><input type="submit" value="continue" />&nbsp;<input type="submit" value="back" /></p>
+		<p class="functnbar"><input type="submit" value="continue" />&nbsp;<input type="submit" value="back" /></p>
 	</div>
 	<!-- Scarab - App -->
 
