--- a/www/ui/milestone6x_screens/2-4-0_step1.html
+++ b/www/ui/milestone6x_screens/2-4-0_step1.html
@@ -182,7 +182,7 @@
 			</table>
 		</div>
 
-		<p id="functnbar"><input type="submit" value="continue" /></p>
+		<p class="functnbar"><input type="submit" value="continue" /></p>
 	</div>
 	<!-- Scarab - App -->
 
