--- a/www/ui/milestone6x_screens/2-4-0_step2b.html
+++ b/www/ui/milestone6x_screens/2-4-0_step2b.html
@@ -220,7 +220,7 @@ Severity
 			</table>
 		</div>
 		
-		<p id="functnbar"><input type="submit" value="continue" />&nbsp;<input type="submit" value="back" /></p>
+		<p class="functnbar"><input type="submit" value="continue" />&nbsp;<input type="submit" value="back" /></p>
 	</div>
 	<!-- Scarab - App -->
 
