--- a/www/ui/milestone6x_screens/2-4-0_step2c.html
+++ b/www/ui/milestone6x_screens/2-4-0_step2c.html
@@ -234,7 +234,7 @@
 		</table>
 		</div>
 		
-		<p id="functnbar"><input type="submit" value="generate report" />&#160;<input type="submit" value="cancel" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="generate report" />&#160;<input type="submit" value="cancel" class="button" /></p>
 	</div>
 	<!-- Scarab - App -->
 
