--- a/www/ui/milestone6x_screens/2-4-0_step3b.html
+++ b/www/ui/milestone6x_screens/2-4-0_step3b.html
@@ -233,7 +233,7 @@
 		
 		<p>page 1 of 1</p>
 
-		<p id="functnbar"><input type="submit" value="save this report" />&nbsp;<input type="submit" value="print" />&nbsp;<input type="submit" value="cancel" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save this report" />&nbsp;<input type="submit" value="print" />&nbsp;<input type="submit" value="cancel" class="button" /></p>
 	</div>
 	<!-- Scarab - App -->
 
