--- a/www/ui/milestone2x_screens/2-6-0.html
+++ b/www/ui/milestone2x_screens/2-6-0.html
@@ -157,13 +157,13 @@
 		<div class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<td><strong>save:</strong></td>
+			<th>save:</th>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<td><strong>verbose view:</strong></td>
+			<th>verbose view:</th>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<td><strong>reassign:</strong></td>
+			<th>reassign:</th>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<td><strong>refine query:</strong></td>
+			<th>refine query:</th>
 			</tr>
 			<tr>
 			<td><input type="submit" value="query" class="bttn" /></td>
@@ -221,13 +221,13 @@
 		<div class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<td><strong>save:</strong></td>
+			<th>save:</th>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<td><strong>verbose view:</strong></td>
+			<th>verbose view:</th>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<td><strong>reassign:</strong></td>
+			<th>reassign:</th>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<td><strong>refine query:</strong></td>
+			<th>refine query:</th>
 			</tr>
 			<tr>
 			<td><input type="submit" value="query" class="bttn" /> </td>
