--- a/www/ui/milestone2x_screens/2-6-0.html
+++ b/www/ui/milestone2x_screens/2-6-0.html
@@ -157,13 +157,13 @@
 		<div class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<th>save:</th>
+			<td>save:</td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>verbose view:</th>
+			<td>verbose view:</td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>reassign:</th>
+			<td>reassign:</td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>refine query:</th>
+			<td>refine query:</td>
 			</tr>
 			<tr>
 			<td><input type="submit" value="query" class="bttn" /></td>
@@ -221,13 +221,13 @@
 		<div class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<th>save:</th>
+			<td>save:</td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>verbose view:</th>
+			<td>verbose view:</td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>reassign:</th>
+			<td>reassign:</td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>refine query:</th>
+			<td>refine query:</td>
 			</tr>
 			<tr>
 			<td><input type="submit" value="query" class="bttn" /> </td>
