--- a/www/ui/milestone2x_screens/2-2-0.html
+++ b/www/ui/milestone2x_screens/2-2-0.html
@@ -505,7 +505,7 @@
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
 			<th width="120">committed by:</th>
-			<td><select multiple>
+			<td><select multiple="multiple">
 			<option>role X</option>
 			<option>role Y</option>
 			<option>role Z</option>
@@ -518,7 +518,7 @@
 			<tr>
 
 			<th width="120">assignee(s):</th>
-			<td><select multiple>
+			<td><select multiple="multiple">
 			<option>role X</option>
 			<option>role Y</option>
 			<option>role Z</option>
@@ -555,7 +555,7 @@
           etc
           </option>
 
-         </select>&nbsp;<input type="submit" name="" value="update options">
+         </select>&nbsp;<input type="submit" name="" value="update options" />
 
           </td>
         </tr>  
