--- a/www/ui/milestone2x_screens/2-2-1.html
+++ b/www/ui/milestone2x_screens/2-2-1.html
@@ -463,7 +463,7 @@
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
 			<th width="120">committed by:</th>
-			<td><select multiple>
+			<td><select multiple="multiple">
 			<option>role X</option>
 			<option>role Y</option>
 			<option>role Z</option>
@@ -475,7 +475,7 @@
 			
 			<tr>
 			<th width="120">assignee(s):</th>
-			<td><select multiple>
+			<td><select multiple="multiple">
 			<option>role X</option>
 			<option>role Y</option>
 			<option>role Z</option>
