--- a/www/ui/milestone2x_screens/2-6-0.html
+++ b/www/ui/milestone2x_screens/2-6-0.html
@@ -127,10 +127,10 @@
 			<option>query two</option>
 			</select> 
 			<input type="submit" name="query" value="Go" class="bttn" />
-			&nbsp;
+			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
 			<input type="submit" name="query" value="Query" class="bttn" />
-			&nbsp;
+			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
 		</tr>
@@ -157,13 +157,13 @@
 		<div class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<td>save:</td>
+			<td><strong>save:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<td>verbose view:</td>
+			<td><strong>verbose view:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<td>reassign:</td>
+			<td><strong>reassign:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<td>refine query:</td>
+			<td><strong>refine query:</strong></td>
 			</tr>
 			<tr>
 			<td><input type="submit" value="query" class="bttn" /></td>
@@ -221,13 +221,13 @@
 		<div class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<td>save:</td>
+			<td><strong>save:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<td>verbose view:</td>
+			<td><strong>verbose view:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<td>reassign:</td>
+			<td><strong>reassign:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<td>refine query:</td>
+			<td><strong>refine query:</strong></td>
 			</tr>
 			<tr>
 			<td><input type="submit" value="query" class="bttn" /> </td>
