--- a/www/ui/milestone5x_screens/2-5-1.html
+++ b/www/ui/milestone5x_screens/2-5-1.html
@@ -127,10 +127,10 @@
 			<option>query two</option>
 			</select> 
 			<input type="submit" name="query" value="Go" class="bttn" />
-			&nbsp;
+			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
 			<input type="submit" name="query" value="Query" class="bttn" />
-			&nbsp;
+			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
 		</tr>
