--- a/www/ui/milestone4x_screens/3-5-0.html
+++ b/www/ui/milestone4x_screens/3-5-0.html
@@ -163,29 +163,30 @@
 			<td>
 				<p><input type="checkbox" /> allow assignee to reassign issue</p>
 				<p><input type="checkbox" /> allow assignee to share/add multiple assignees</p>
-</td>
+			</td>
 			</tr>
 			<tr>
 			<th width="120">"Response required" options</th>
 			<td><p><select>
-		<option>1 day</option>
-		<option>2 day</option>
-		<option>3 day</option>
-		</select>
-		</p></td>
-			</tr>
-		
-			<tr>
-			<th width="120">"If no response" options</th>
-			<td>
-				<p><input type="checkbox" checked /> send email to team lead</p>
-				<p><input type="checkbox" checked /> send email to assignee</p>
-				<p><input type="checkbox" checked /> return to unassigned issues queue</p>
-			</td>
-			</tr>		
-		</table>
+			<option>1 day</option>
+			<option>2 day</option>
+			<option>3 day</option>
+			</select>
+			</p></td>
+				</tr>
+			
+				<tr>
+				<th width="120">"If no response" options</th>
+				<td>
+					<p><input type="checkbox" checked="checked" /> send email to team lead</p>
+					<p><input type="checkbox" checked="checked" /> send email to assignee</p>
+					<p><input type="checkbox" checked="checked" /> return to unassigned issues queue</p>
+				</td>
+				</tr>		
+			</table>
+		</div>
 		<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
-
+		
 	</div>
 	<!-- Scarab - App -->
 
