--- a/www/ui/milestone1x_screens/2-1-1.html
+++ b/www/ui/milestone1x_screens/2-1-1.html
@@ -183,7 +183,7 @@
 
 		<table width="100%" cellpadding="3" cellspacing="2" border="1">
 		<tr>
-		<th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" /></a><a href="#"><img src="../csi/images/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" /></a></th>
+		<th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow_off.gif" width="13" height="8" alt="sort ascending" border="0" /></a><a href="#"><img src="../csi/images/icon_downarrow_on.gif" width="13" height="8" alt="sort descending" border="0" /></a></th>
 		<th><a href="#" title="sort">issue ID #:</a></th>
 		<th><a href="#" title="sort">issue summary:</a></th>
 		<th><a href="#" title="sort">platform:</a></th>
